<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Capsule manager</string>
    <string name="actList">Capsules list</string>
    <string name="actEdit">Capsules edition</string>
    <string name="actAdd">Add a new capsule</string>
    <string name="txtMissingData">Missing data in the form</string>
    <string name="txtCapsuleAdded">Capsule added!</string>
    <string name="txtCapsuleExists">This capsule already exists</string>
    
    <string name="capsuleName">Name:</string>
    <string name="capsuleTotal">Available:</string>
    <string name="capsuleDescription">Description:</string>
    <string name="capsuleIntensity">Intensity:</string>
    <string name="capsuleSuggestions">Suggestions:</string>
    
    <string name="buttonRandom">Random!</string>
    <string name="buttonTakeIt">Take It!</string>
    <string name="buttonEditStock">Edit Stock</string>
    <string name="btAdd">Add</string>
    
    <string name="welcomeText">Welcome! You have not drink any coffee yet.</string>
    <string name="lastCoffeeText">Your last coffee was:</string>
        
    <string name="Ristretto">Powerful and contrasting.</string>
    <string name="Livanto">Round and balanced.</string>
    <string name="Cosi">Light and lemony.</string>
    <string name="Arpeggio">Intense and creamy.</string>
    <string name="Capriccio">Rich and distinctive.</string>
    <string name="Roma">Full and balanced.</string>
    <string name="Volluto">Sweet and fruity.</string>
    <string name="Indriya">Powerful and spicy.</string>
    <string name="Rosabaya">Fruity and balanced.</string>
    <string name="Dulsão">Sweet and smooth.</string>
    <string name="Fortissio_Lungo">Rich and intense.</string>
    <string name="Vivalto_Lungo">Complex and balanced.</string>
    <string name="Finezzo_Lungo">Floral and refreshing.</string>
    <string name="Decaffeinato_Intenso">Dense and powerful.</string>
    <string name="Decaffeinato_Lungo">Light and full-flavoured.</string>
    <string name="Decaffeinato">Fruity and delicate.</string>
    
    <string name="milk">Milk</string>
    <string name="ristretto">Ristretto</string>
    <string name="espresso">Espresso</string>
    <string name="lungo">Lungo</string>
    
    <string name="tagStart">Create Start NFC Tag</string>
    <string name="createTags">Create NFC Tags</string>
    <string name="tempCreateToast">Still not implemented</string>
    
</resources>