<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:id="@+id/capsuleName" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/capsuleName" />
	<TextView android:id="@+id/capsuleTotal" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/capsuleTotal" />
	<TextView android:id="@+id/capsuleDescription" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/capsuleDescription" />
	<TextView android:id="@+id/capsuleIntensity" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/capsuleIntensity" />
	<TextView android:id="@+id/capsuleSuggestions" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/capsuleSuggestions" />
	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/buttonRandom"
		android:id="@+id/buttonRandom" />
	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/buttonTakeIt"
		android:id="@+id/buttonTakeIt" android:visibility="invisible"/>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="bottom">
	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/createTags"
		android:id="@+id/btCreateTags" />
	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/buttonEditStock"
		android:id="@+id/buttonEditStock" />
	</LinearLayout>
</LinearLayout>