<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/capsule_name"
		android:text="@string/capsuleName" />
	<EditText android:layout_height="wrap_content" android:id="@+id/etName"
		android:layout_width="fill_parent" android:inputType="text" />
	<TextView android:text="@string/capsuleDescription"
		android:id="@+id/tvDescription" android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	<EditText android:layout_height="wrap_content" android:id="@+id/etDescription"
		android:layout_width="fill_parent" android:inputType="text" />
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_width="fill_parent">
			<TextView android:text="@string/capsuleTotal" android:id="@+id/tvTotal"
				android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"/>
			<EditText android:layout_height="wrap_content" android:id="@+id/etTotal"
				android:inputType="number" android:layout_weight="1" android:layout_width="0dp"/>
			<TextView android:text="@string/capsuleIntensity" android:id="@+id/tvIntensity"
				android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"/>
			<EditText android:layout_height="wrap_content" android:id="@+id/etIntensity"
				android:inputType="number" android:layout_weight="1" android:layout_width="0dp"/>
	</LinearLayout>
	<TextView android:text="@string/capsuleSuggestions"
		android:id="@+id/tvSuggestions" android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	<CheckBox android:text="@string/milk" android:id="@+id/cbMilk"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<CheckBox android:text="@string/ristretto" android:id="@+id/cbRistretto"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<CheckBox android:text="@string/espresso" android:id="@+id/cbEspresso"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<CheckBox android:text="@string/lungo" android:id="@+id/cbLungo"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<LinearLayout 
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:gravity="bottom">
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/btAdd"
			android:id="@+id/btAdd" android:enabled="false" />	</LinearLayout>
</LinearLayout>
